 *               CRITICAL, RESERVED, etc., macros; changed slightly confusing
 *               CRC error message ("actual/should be" -> "computed/expected");
 *               added sTER support
 * 20060617 GRR: released version 2.1.0
 *               ----------------------
 * 20061202 GRR: always print a per-file summary (even if error(s))
 * 20061203 GRR: added tests for all but two of the error conditions present
 *               in Chris Nokleberg's brokensuite-20061201; added new warning
 *               level (treat as OK if private test, error if public); started
 *               reducing dependence on global variables; added final totals
 *               for errors, warnings, and "OK" files; switched to logical
 *               names for error levels; fixed some inconsistent error levels;
 *               started removing unsafe ASCII assumptions; added checks for
 *               (private) cmOD, cpIp chunks; filled in old (missing) version
 *               info in CHANGELOG
 * 20061203 GRR: released version 2.2.0
 *               ----------------------
 * 20070211 GRR: extended pngsplit file-signature recognizer to support MNG and
 *               JNG (as claimed in help screen)
 * 20070704 GRR: cleaner fix for narrow interlaced images (account for missing
 *               passes); added rows per pass for interlaced images; added
 *               pass-separators in -vv row-filter output; added -c option for
 *               ANSI colors (filenames, chunk names, row filters, error/OK);
 *               alphabetized options on usage screen; made const string-arrays
 *               const
 * 20070707 GRR: fixed 64-bit ptrdiff_t printf() issue (%td); added check for
 *               NULLs (and "discouraged" chars) in tEXt; added check for zero
 *               values in sCAL; fixed error cascade for private interlace
 *               method; fixed non-verbose-mode IDAT/PLTE message
 * 20070707 GRR: released version 2.3.0
 *               ----------------------